<resources>
    <string name="app_name">AutoCoach2.0</string>
    <string name="edit_message">Enter a message</string>
    <string name="title">AutoCoach</string>
    <string name="user_email">Enter Email:</string>
    <string name="user_nickname">Enter Nickname:</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Enter Password:</string>
    <string name="user_age">Enter Age:</string>
    <string name="good">GOOD</string>
    <string name="bad">BAD</string>
    <string name="status_text"> </string>
    <string name="content_authority">com.example.autocoach</string>
    <string name="sync_account_type">com.example.autocoach</string>
    <string name="consent_dialogue_message">
        Your name, e-mail address, gender, age, health information, location, and driving performances collected by us will be used for providing personalized feedback for you \nand for compiling aggregate statistics on users of the service provided by AutoCoach2.0. \nSuch statistics are collected for the purpose of managing and improving the design of AutoCoach2.0.\nWe cannot use your personal data unless we have received your onset or indication of no objection.
    </string>
    <string name="consent_dialogue_title">
        Privacy Policy and Terms of Service
    </string>
    <string name="ack_dialogue_message">
        You are about to start experiencing the AutoCoach2.0 Alpha version.
        \nThe Alpha version supports
        \n1.User registration and authentication
        \n2.User driving speed monitor
        \n3.User steering wheel angle
        \n4.User head position
        \nIf you have any complaints or advices, please reach us using the contact information displayed below.
    </string>
    <string name="ack_dialogue_title">
        Version Acknowledgement
    </string>

</resources>