<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warm1"
    tools:context=".Activities.SignUpActivity">

    <TextView
        android:id="@+id/projectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/stalinist_one"
        android:text="@string/app_name"
        android:textColor="@color/warm4"
        android:textSize="32sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/inputGroup"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/projectTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button">

        <EditText
            android:id="@+id/uEmail"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@color/warm3"
            android:elevation="2dp"
            android:fontFamily="@font/sarpanch_bold"
            android:hint="@string/user_email"
            android:inputType="textPersonName"
            android:textAllCaps="false"
            android:textColor="@color/warm1"
            android:textColorHint="@color/warm4"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/uPword"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/uPword"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@color/warm2"
            android:elevation="2dp"
            android:fontFamily="@font/sarpanch_bold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/warm1"
            android:textColorHint="@color/warm4"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uEmail" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/warm4"
        android:elevation="3dp"
        android:fontFamily="@font/sarpanch_bold"
        android:text="@string/register"
        android:textSize="15sp"
        android:textColor="@color/warm1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputGroup"
        app:layout_constraintTop_toBottomOf="@id/projectTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>