<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color3"
    tools:context=".Activities.SignInActivity">

    <TextView
        android:id="@+id/projectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/app_name"
        android:textColor="@color/color1"
        android:textSize="48sp"
        android:typeface="monospace"
        android:shadowColor="@color/color2"
        android:shadowRadius="3"
        android:shadowDx="2"
        android:shadowDy="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputGroup"/>
        <LinearLayout
            android:id="@+id/inputGroup"
            android:layout_width="500dp"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@id/projectTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sing_in_btn">

            <EditText
                android:id="@+id/uEmail"
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/aclonica"
                android:hint="@string/user_email"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textColor="@color/color3"
                android:textSize="20sp"
                android:background="@color/color2"
                android:elevation="2dp"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf = "parent"
                app:layout_constraintBottom_toTopOf = "@id/uPword"/>

            <EditText
                android:id="@+id/uPword"
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/aclonica"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/color3"
                android:textSize="20sp"
                android:background="@color/color2"
                android:elevation="2dp"
                app:layout_constraintEnd_toStartOf="@+id/button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/uEmail"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </LinearLayout>

    <Button
        android:id="@+id/sing_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/color1"
        android:fontFamily="@font/orbitron_bold"
        android:text="@string/register"
        android:textColor="@color/color3"
        app:icon="@android:drawable/ic_menu_add"
        app:iconTint="@color/color3"
        app:layout_constraintTop_toBottomOf="@id/projectTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>