<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warm1"
    tools:context=".Activities.MainActivity">


    <ImageButton
        android:id="@+id/signUpFolder"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/sign_up_folder"
        app:layout_constraintTop_toBottomOf="@id/projectTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf ="parent"/>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:backgroundTint="@color/warm2"
        android:fontFamily="@font/stalinist_one"
        android:text="@string/sign_up"
        android:textColor="@color/warm1"
        android:textSize="15sp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toTopOf="@id/signUpFolder"
        app:layout_constraintStart_toStartOf="@id/signUpFolder" />

    <ImageButton
        android:id="@+id/signInFolder"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="200dp"
        app:srcCompat="@drawable/sign_in_folder"
        app:layout_constraintTop_toBottomOf="@id/projectTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf ="parent" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:backgroundTint="@color/warm3"
        android:fontFamily="@font/stalinist_one"
        android:layout_marginLeft="16dp"
        android:text="@string/sign_in"
        android:textColor="@color/warm1"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/signInFolder"
        app:layout_constraintBottom_toTopOf="@+id/signInFolder" />

    <TextView
        android:id="@+id/projectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/stalinist_one"
        android:shadowColor="@color/warm2"
        android:shadowRadius="2"
        android:text="@string/app_name"
        android:textColor="@color/warm4"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signInFolder"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contactMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="CONTACT US"
            android:fontFamily="@font/orbitron_bold"
            android:textColor="@color/dark_orange"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/contactEmail"

            ></TextView>

        <TextView
                android:id="@+id/contactEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:textSize="10dp"
                android:text="Email: xueningl@uci.edu / yuehanc@uci.edu / fangzhod@uci.edu / wenxuaw2@uci.edu / txiang2@uci.edu; "
                android:fontFamily="@font/orbitron_bold"
                android:textColor="@color/warm4"
                app:layout_constraintTop_toBottomOf="@id/contactEmail"
                app:layout_constraintStart_toStartOf="parent"
            ></TextView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>